--- a/phone_store/store/templates/product_header_content.html
+++ b/phone_store/store/templates/product_header_content.html
@@ -50,7 +50,7 @@
 {% if prod_header == 'reviews' %}
 <div id="des-details3" class="tab-pane active">
     <div class="review-wrapper">
-        <h2>{{product.comments.count}} review for {{product.name}}</h2>
+        <h2>{{comment_count}} review for {{product.name}}</h2>
         {% for item in product.comments.all %}
         <div class="single-review">
             <div class="review-img">
