--- a/phone_store/blog/templates/blog/blog.html
+++ b/phone_store/blog/templates/blog/blog.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load tag_blog %}
+
 {% block content %}
 <div class="main-wrapper">
 
@@ -19,7 +21,7 @@
                     <div class="main-blog-wrap">
 
                         {% for item in post %}
-                        <div style="margin-bottom: 20px;"> <span class="categor">Life Style</span></div>
+                        <div style="margin-bottom: 20px;"><span class="categor">Life Style</span></div>
                         <div class="blog-wrap-4">
                             <div class="blog-content-4">
                                 <h3><a href="#">{{item.title}}</a></h3>
@@ -50,6 +52,8 @@
 
                     </div>
                 </div>
+
+
                 <div class="col-lg-3">
                     <div class="sidebar-search">
                         <form class="search-form" action="#">
@@ -98,30 +102,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="sidebar-widget mt-60 mb-55">
-                        <h4 class="pro-sidebar-title2">Categories </h4>
-                        <div class="sidebar-widget-list-2 mt-25">
-                            <ul>
-                                <li><a href="#">Life Style</a> <span>(12)</span></li>
-                                <li><a href="#">Technology</a> <span>(08)</span></li>
-                                <li><a href="#">Photography</a> <span>(06)</span></li>
-                                <li><a href="#">Cafe</a> <span>(17)</span></li>
-                                <li><a href="#">Travel</a> <span>(9)</span></li>
-                                <li><a href="#">Games</a> <span>(14)</span></li>
-                                <li><a href="#">Story love</a> <span>(11)</span></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="sidebar-widget mb-60">
-                        <h4 class="pro-sidebar-title2">Archives </h4>
-                        <div class="archives-wrap mt-30">
-                            <select>
-                                <option> June 2019</option>
-                                <option> December 2018</option>
-                                <option> November 2018</option>
-                            </select>
-                        </div>
-                    </div>
+
+                    {% categories %}
+
+
                     <div class="sidebar-widget mb-55">
                         <h4 class="pro-sidebar-title2">Tags </h4>
                         <div class="sidebar-widget-tags-2 mt-25">
@@ -138,6 +122,7 @@
                             </ul>
                         </div>
                     </div>
+
                     <div class="sidebar-widget mb-65">
                         <div class="blog-sidebar-banner">
                             <a href="#"><img alt="" src="assets/images/blog/banner-blog.jpg"></a>
