--- a/phone_store/blog/templates/blog/blog.html
+++ b/phone_store/blog/templates/blog/blog.html
@@ -21,7 +21,7 @@
                     <div class="main-blog-wrap">
 
                         {% for item in post %}
-                        <div style="margin-bottom: 20px;"><span class="categor">Life Style</span></div>
+                        <div style="margin-bottom: 20px;"><span class="categor">{{item.category}}</span></div>
                         <div class="blog-wrap-4">
                             <div class="blog-content-4">
                                 <h3><a href="#">{{item.title}}</a></h3>
