--- a/phone_store/blog/templates/categories.html
+++ b/phone_store/blog/templates/categories.html
@@ -1,14 +1,11 @@
 <div class="sidebar-widget mt-60 mb-55">
-                        <h4 class="pro-sidebar-title2">Categories </h4>
-                        <div class="sidebar-widget-list-2 mt-25">
-                            <ul>
-                                <li><a href="#">Life Style</a> <span>(12)</span></li>
-                                <li><a href="#">Technology</a> <span>(08)</span></li>
-                                <li><a href="#">Photography</a> <span>(06)</span></li>
-                                <li><a href="#">Cafe</a> <span>(17)</span></li>
-                                <li><a href="#">Travel</a> <span>(9)</span></li>
-                                <li><a href="#">Games</a> <span>(14)</span></li>
-                                <li><a href="#">Story love</a> <span>(11)</span></li>
-                            </ul>
-                        </div>
-                    </div>
+    <h4 class="pro-sidebar-title2">Categories </h4>
+    <div class="sidebar-widget-list-2 mt-25">
+        <ul>
+            {% for i in categories %}
+            <li><a href="{% url 'blog_home' %}?category={{i.slug}}">{{i.name}}</a> <span>({{i.items.count}})</span></li>
+            {% endfor %}
+
+        </ul>
+    </div>
+</div>
