--- a/phone_store/blog/templates/blog/blog.html
+++ b/phone_store/blog/templates/blog/blog.html
@@ -56,9 +56,15 @@
 
                 <div class="col-lg-3">
                     <div class="sidebar-search">
-                        <form class="search-form" action="#">
-                            <input type="text" placeholder="SEARCH POST...">
-                            <button class="button-search"><i class="lnr lnr-magnifier"></i></button>
+                        <form class="search-form" action="" method="post">
+                            {% csrf_token %}
+                            <input type="text" placeholder="SEARCH POST..." name="search">
+                            <button class="button-search">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                                     class="bi bi-search" viewBox="0 0 16 16">
+                                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                                </svg>
+                            </button>
                         </form>
                     </div>
                     <div class="sidebar-widget mt-60 mb-55">
