--- a/phone_store/blog/templates/blog/blog.html
+++ b/phone_store/blog/templates/blog/blog.html
@@ -25,7 +25,7 @@
                         <div class="blog-wrap-4">
                             <div class="blog-content-4">
 
-                                <h3><a href="{% url 'blog_details' item.slug %}">{{item.title}}</a></h3>
+                                <h3><a href="{{item.get_absolute_url}}">{{item.title}}</a></h3>
                                 <div class="blog-meta-4">
                                     <ul>
                                         <li><a href="#">{{item.data_create|date:'F d, Y'}}</a></li>
