--- a/phone_store/blog/templates/blog/blog-details.html
+++ b/phone_store/blog/templates/blog/blog-details.html
@@ -180,12 +180,31 @@
                         <form class="search-form" action="{% url 'blog_home' %}" method="post">
                             {% csrf_token %}
                             <input type="text" placeholder="SEARCH POST..." name="search">
-                            <button class="button-search"><i class="lnr lnr-magnifier"></i></button>
+                            <button class="button-search">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                                     class="bi bi-search" viewBox="0 0 16 16">
+                                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                                </svg>
+                            </button>
                         </form>
                     </div>
                     {% popular_post %}
                     {% categories %}
                     {% tags %}
+                    <div class="sidebar-widget mb-65">
+                        <div class="subscribe-form-5">
+                            <form class="validate subscribe-form-style-5" action="" method="post">
+                                {% csrf_token %}
+                                <div class="mc-form-5">
+                                    <input class="email" type="email" required=""
+                                           placeholder="Enter your email address..." name="email" value="">
+                                    <div class="clear-5">
+                                        <input class="button" type="submit" name="subscribe" value="">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
 
                 </div>
             </div>
