post comment view

--- a/phone_store/blog/templates/blog/blog-details.html
+++ b/phone_store/blog/templates/blog/blog-details.html
@@ -144,26 +144,15 @@
                         <div class="comment-form">
                             <h3>Leave a Reply </h3>
                             <p>Your email address will not be published. Required fields are marked *</p>
-                            <form action="#">
+                            <form action="" method="post">
+                                {% csrf_token %}
                                 <div class="row">
-                                    <div class="col-lg-4 col-md-4">
-                                        <div class="leave-form">
-                                            <input placeholder="Name *" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-md-4">
-                                        <div class="leave-form">
-                                            <input placeholder="Email *" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-md-4">
-                                        <div class="leave-form">
-                                            <input placeholder="Website" type="text">
-                                        </div>
-                                    </div>
                                     <div class="col-md-12">
                                         <div class="leave-form">
-                                            <textarea placeholder="Your Comment"></textarea>
+                                            <input type="hidden" name="parent" value="par_comment">
+                                            <input type="hidden" name="post" value="{{post.id}}">
+<!--                                            <textarea placeholder="Your Comment"></textarea>-->
+                                            {{form}}
                                         </div>
                                     </div>
                                 </div>
