--- a/phone_store/blog/templates/blog/blog-details.html
+++ b/phone_store/blog/templates/blog/blog-details.html
@@ -81,6 +81,8 @@
                             <h4 class="blog-details-title">4 Comment</h4>
                             <div class="blog-comments-wrap">
                                 <div class="single-blog-bundel">
+                                    {% for item in comments %}
+                                    {% if not item.parent%}
                                     <div class="single-blog-comment mb-40">
                                         <div class="blog-comment-img">
                                             <img alt="" src="assets/images/blog/user1.png">
@@ -90,55 +92,30 @@
                                                 has been excellent and answered every question we've thrown at them</p>
                                             <div class="comment-name-reply">
                                                 <h5>35 mins ago, 15 November 2019 </h5>
-                                                <a href="#">Reply</a>
+                                                <a href="{% url 'blog_details' post.slug %}?post_parent={{item.id}}">Reply</a>
                                             </div>
                                         </div>
                                     </div>
+                                    {% endif %}
+                                    {% for item_parent in item.parent_comments.all %}
                                     <div class="single-blog-comment child-blog-comment ml-80">
                                         <div class="blog-comment-img">
                                             <img alt="" src="assets/images/blog/user2.png">
                                         </div>
-                                        <div class="blog-comment-content">
+                                        <div class="blog-comment-content" style="margin-bottom:30px">
                                             <p>“This theme is indeed a great purchase. Support center is also helpful
                                                 and quick to answer. No issues so far.”</p>
                                             <div class="comment-name-reply">
                                                 <h5>35 mins ago, 15 November 2019</h5>
-                                                <a href="#">Reply</a>
+                                                <a href="{% url 'blog_details' post.slug %}?post_parent={{item_parent.id}}">Reply</a>
                                             </div>
                                         </div>
                                     </div>
+                                    {% endfor %}
+                                    {% endfor %}
                                 </div>
-                                <div class="single-blog-bundel">
-                                    <div class="single-blog-comment">
-                                        <div class="blog-comment-img">
-                                            <img alt="" src="assets/images/blog/user3.png">
-                                        </div>
-                                        <div class="blog-comment-content">
-                                            <p>“Exceptional service, beautiful and straightforward theme! Can't
-                                                recommend enough.”</p>
-                                            <div class="comment-name-reply">
-                                                <h5>35 mins ago, 15 November 2019</h5>
-                                                <a href="#">Reply</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="single-blog-bundel">
-                                    <div class="single-blog-comment">
-                                        <div class="blog-comment-img">
-                                            <img alt="" src="assets/images/blog/user4.png">
-                                        </div>
-                                        <div class="blog-comment-content">
-                                            <p>“Highly customizable. Excellent design. Customer services has exceeded my
-                                                expectation. They are quick to answer and even when they don't know the
-                                                answer right away. They'll work with you towards a solution.”</p>
-                                            <div class="comment-name-reply">
-                                                <h5>35 mins ago, 15 November 2019</h5>
-                                                <a href="#">Reply</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+
+
                             </div>
                         </div>
                         <div class="comment-form">
@@ -149,16 +126,21 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="leave-form">
-                                            <input type="hidden" name="parent" value="par_comment">
+                                            <input type="hidden" name="parent" value="{{parent.id}}">
                                             <input type="hidden" name="post" value="{{post.id}}">
-<!--                                            <textarea placeholder="Your Comment"></textarea>-->
-                                            {{form}}
+                                            {% if parent %}
+                                            <textarea placeholder="Your Comment" name="content" >{{parent.user}}, </textarea>
+                                            {% else %}
+                                            <textarea placeholder="Your Comment" name="content"></textarea>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
                                 <div class="text-submit">
                                     <input type="submit" value="Post Comment">
+                                    <a href="{% url 'blog_details' post.slug %}" class="a-cancel">CANCEL</a>
                                 </div>
+
                             </form>
                         </div>
                     </div>
